--- a/JournalMonitor/EddiJournalMonitor.csproj
+++ b/JournalMonitor/EddiJournalMonitor.csproj
@@ -85,6 +85,10 @@
       <Project>{c5f48807-921b-456d-a9e4-a0282e5e8cf1}</Project>
       <Name>EddiDataProviderService</Name>
     </ProjectReference>
+    <ProjectReference Include="..\EddiCrimeMonitor\EddiCrimeMonitor.csproj">
+      <Project>{98543843-2490-4efc-a964-2fbb16910efa}</Project>
+      <Name>EddiCrimeMonitor</Name>
+    </ProjectReference>
     <ProjectReference Include="..\EDDI\Eddi.csproj">
       <Project>{ec7ba042-a370-447f-8c3e-241358cebcbb}</Project>
       <Name>Eddi</Name>
