Modified/added npc crew events. Added skeleton for 'Crew Details' tab.

--- a/DataDefinitions/EddiDataDefinitions.csproj
+++ b/DataDefinitions/EddiDataDefinitions.csproj
@@ -71,6 +71,7 @@
     <Compile Include="BlueprintMaterials.cs" />
     <Compile Include="BodyType.cs" />
     <Compile Include="CargoInfo.cs" />
+    <Compile Include="Crew.cs" />
     <Compile Include="CrimeReport.cs" />
     <Compile Include="FactionRecord.cs" />
     <Compile Include="Happiness.cs" />
