Added tracking of individual 'claims' events.

--- a/DataDefinitions/EddiDataDefinitions.csproj
+++ b/DataDefinitions/EddiDataDefinitions.csproj
@@ -72,7 +72,7 @@
     <Compile Include="BodyType.cs" />
     <Compile Include="CargoInfo.cs" />
     <Compile Include="Crew.cs" />
-    <Compile Include="CrimeReport.cs" />
+    <Compile Include="FactionReport.cs" />
     <Compile Include="FactionRecord.cs" />
     <Compile Include="Happiness.cs" />
     <Compile Include="MarketInfo.cs" />
